force-app/main/default/objects/Announcement__c/Announcement__c.object-meta.xml
<CustomObject>
    <label>Announcement</label>
    <nameField>
        <label>Announcement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>