force-app/main/default/objects/Announcement__c/fields/Announcement_Days__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Days__c</fullName>
    <formula>End_Date_Time__c -  Start_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Announcement Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>